<resources>

    <string name="app_name">FYP_APP_FINAL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="class_list_heading">Your Classes</string>
    <string name="default_text_course_spinner">Select A Course Please</string>
    <string name="default_text_class_spinner">Select A Class Please</string>
    <string name="default_text_message_editbox">Please write a short reason for this request…</string>
    <string name="teacher_schedule_list_heading">Your Classes: </string>
    <string name="submit_button">Submit</string>


    <!-- MENU BAR STRINGS -->
    <string name="action_menu_logout">Log Out</string>
    <string name="action_menu_refresh">Refresh</string>
    <string name="action_menu_request">Extra Request</string>

    <!-- ROOM STATUS SCHEDULE STRINGS -->
    <string name="room_status_heading">Check Room Status</string>
    <string name="room_status_attribute_date">Date: </string>
    <string name="room_status_attribute_room">Room Name: </string>
    <string name="room_status_attribute_course_name">Course Name: </string>
    <string name="room_status_attribute_teacher_name">Teacher Name: </string>
    <string name="room_status_attribute_session">Sessions: </string>
    <string name="room_status_attribute_class_type">Class Type: </string>
    <string name="room_status_attribute_attendance">Attendance: </string>

    <!-- PENDING REQUEST STRINGS -->
    <string name="pending_request_list_heading">Your Pending Requests</string>
    <string name="pending_request_attribute_teacher_name">Teacher Name: </string>
    <string name="pending_request_attribute_course_name">Course Name: </string>
    <string name="pending_request_attribute_request_type">Request Type: </string>
    <string name="pending_request_attribute_reason">General Reason: </string>
    <string name="pending_request_button_details">Details</string>

    <string name="pending_request_info_heading">Pending Request Details</string>
    <string name="pending_request_info_room">Room:</string>
    <string name="pending_request_info_day">Day:</string>
    <string name="pending_request_info_slot">Slot:</string>
    <string name="pending_request_info_length">Length:</string>
    <string name="pending_request_info_message">Message:</string>


    <!-- OVERRIDE ROOM SCHEDULE STRINGS -->
    <string name="override_room_select_heading">Room:</string>
    <string name="override_schedule_heading">Schedule: </string>
    <string name="override_radio_button_right_now">Right Now</string>
    <string name="override_radio_button_later">Later</string>
    <string name="override_radio_button_cant">Invalid Time To Schedule</string>
    <string name="override_schedule_select">Select Date, Slot, and Length</string>
    <string name="override_schedule_date">Day:</string>
    <string name="override_schedule_slot">Slot:</string>
    <string name="override_schedule_length">Length:</string>
    <string name="override_selection_heading">Control Appliances Appropriately</string>
    <string name="override_selection_relay_1">Lights and Fans 1st Row</string>
    <string name="override_selection_relay_2">Lights and Fans 2nd Row</string>
    <string name="override_selection_relay_3">Lights and Fans 3rd Row</string>
    <string name="override_selection_relay_4">Lights and Fans 4th Row</string>
    <string name="override_selection_relay_5">Lights and Fans 5th Row</string>
    <string name="override_selection_relay_6">Lights and Fans 6th Row</string>
    <string name="override_selection_relay_7">Air Conditioner Front</string>
    <string name="override_selection_relay_8">Air Conditioner Back</string>
    <string name="override_selection_button_open_all">Open All</string>
    <string name="override_selection_button_close_all">Close All</string>

    <!-- EXTRA REQUEST FORM STRINGS -->
    <string name="extra_request_form_heading">Special Request Form</string>
    <string name="extra_request_form_course_name">Course: </string>
    <string name="extra_request_form_request_type">Request Type:</string>
    <string name="extra_request_form_rb_extra_class">Extra Class</string>
    <string name="extra_request_form_rb_cancel_class">Cancel Class</string>
    <string name="extra_request_form_day">Day:</string>
    <string name="extra_request_form_room">Room:</string>
    <string name="extra_request_form_slot">Slot:</string>
    <string name="extra_request_form_length">Length:</string>
    <string name="extra_request_form_classes">Class:</string>
    <string name="extra_request_form_general_reason">General Reason:</string>
    <string name="extra_request_form_message">Message:</string>
    <string name="extra_request_form_message_hint">Enter your message...</string>
    <string name="extra_request_form_title">Extra Request Form</string>

    <!-- SPINNER ARRAY AND DEFAULT STRINGS -->
    <string name="default_text_room_spinner">Select A Room Please</string>
    <string-array name="Rooms">
        <item>Room A</item>
        <item>Room B</item>
        <item>Room C</item>
        <item>Room D</item>
        <item>Room E</item>
        <item>Room F</item>
        <item>Room G</item>
        <item>Room H</item>
        <item>Room I</item>
        <item>Room J</item>
    </string-array>

    <string name="default_text_slot_spinner">Select A Slot Please</string>
    <string-array name="Slots">
        <item>Slot 1</item>
        <item>Slot 2</item>
        <item>Slot 3</item>
        <item>Slot 4</item>
        <item>Slot 5</item>
        <item>Slot 6</item>
        <item>Slot 7</item>
    </string-array>

    <string name="default_text_no_days_available">No Days Available</string>
    <string-array name="no_days_available_array">
        <item>No Days Available</item>
    </string-array>

    <string name="default_text_general_reason_spinner">Select A Reason Please</string>
    <string-array name="general_reason_spinner_cancel_class">
        <item>I am sick</item>
        <item>Syllabus has been completed</item>
        <item>I will be in a meeting</item>
        <item>I will be substituting another class</item>
        <item>An extra class has been conducted</item>
    </string-array>
    <string-array name="general_reason_spinner_extra_class">
        <item>Credit hours are not complete</item>
        <item>A recent class was missed</item>
        <item>I need to cover syllabus</item>
        <item>I need to cover for a coming holiday</item>
        <item>Many students\' attendance is low</item>
    </string-array>

</resources>
