<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/pending_request_info_heading"
            android:textColor="@color/colorAccentMaroonish"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:text="@string/pending_request_attribute_teacher_name"
            android:textColor="@color/colorAccentMaroonish"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pending_request_attribute_course_name"
            android:textColor="@color/colorAccentMaroonish"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/extra_request_form_general_reason"
            android:textColor="@color/colorAccentMaroonish"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView34" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/extra_request_form_message"
            android:textColor="@color/colorAccentMaroonish"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pending_request_info_general_reason_text_view" />

        <TextView
            android:id="@+id/pending_request_info_teacher_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pending_request_attribute_teacher_name"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView22"
            app:layout_constraintEnd_toEndOf="@+id/pending_request_info_request_type_text_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pending_request_info_request_type_text_view"
            app:layout_constraintTop_toTopOf="@+id/textView22"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/pending_request_info_course_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pending_request_attribute_course_name"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView23"
            app:layout_constraintEnd_toEndOf="@+id/pending_request_info_teacher_text_view"
            app:layout_constraintStart_toStartOf="@+id/pending_request_info_teacher_text_view"
            app:layout_constraintTop_toTopOf="@+id/textView23" />

        <TextView
            android:id="@+id/pending_request_info_room_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pending_request_info_room"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView24"
            app:layout_constraintEnd_toEndOf="@+id/pending_request_info_teacher_text_view"
            app:layout_constraintStart_toStartOf="@+id/pending_request_info_teacher_text_view"
            app:layout_constraintTop_toTopOf="@+id/textView24" />

        <TextView
            android:id="@+id/pending_request_info_day_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pending_request_info_day"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView25"
            app:layout_constraintEnd_toEndOf="@+id/pending_request_info_teacher_text_view"
            app:layout_constraintStart_toStartOf="@+id/pending_request_info_teacher_text_view"
            app:layout_constraintTop_toTopOf="@+id/textView25" />

        <TextView
            android:id="@+id/pending_request_info_slot_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pending_request_info_slot"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView33"
            app:layout_constraintEnd_toEndOf="@+id/pending_request_info_teacher_text_view"
            app:layout_constraintStart_toStartOf="@+id/pending_request_info_teacher_text_view"
            app:layout_constraintTop_toTopOf="@+id/textView33" />

        <TextView
            android:id="@+id/pending_request_info_length_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pending_request_info_length"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView34"
            app:layout_constraintEnd_toEndOf="@+id/pending_request_info_teacher_text_view"
            app:layout_constraintStart_toStartOf="@+id/pending_request_info_teacher_text_view"
            app:layout_constraintTop_toTopOf="@+id/textView34" />

        <TextView
            android:id="@+id/pending_request_info_general_reason_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/extra_request_form_general_reason"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/pending_request_info_teacher_text_view"
            app:layout_constraintStart_toStartOf="@+id/pending_request_info_teacher_text_view"
            app:layout_constraintTop_toTopOf="@+id/textView28" />

        <TextView
            android:id="@+id/pending_request_info_request_type_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pending_request_attribute_request_type"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView26"
            app:layout_constraintTop_toTopOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/pending_request_attribute_request_type"
            android:textColor="@color/colorAccentMaroonish"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pending_request_info_room"
            android:textColor="@color/colorAccentMaroonish"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pending_request_info_day"
            android:textColor="@color/colorAccentMaroonish"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pending_request_info_slot"
            android:textColor="@color/colorAccentMaroonish"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pending_request_info_length"
            android:textColor="@color/colorAccentMaroonish"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView33" />

        <TextView
            android:id="@+id/pending_request_info_message_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/pending_request_info_message"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/pending_request_info_request_type_text_view"
            app:layout_constraintStart_toStartOf="@+id/textView29"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>